--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/home.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/home.html
@@ -5,80 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {font-family: Arial;}
-        
-        /* Style the tab */
-        .tab {
-          overflow: hidden;
-          border: 1px solid #ccc;
-          background-color: #f1f1f1;
-        }
-        
-        /* Style the buttons inside the tab */
-        .tab button {
-          background-color: inherit;
-          float: left;
-          border: none;
-          outline: none;
-          cursor: pointer;
-          padding: 14px 16px;
-          transition: 0.3s;
-          font-size: 17px;
-        }
-        
-        /* Change background color of buttons on hover */
-        .tab button:hover {
-          background-color: #ddd;
-        }
-        
-        /* Create an active/current tablink class */
-        .tab button.active {
-          background-color: #ccc;
-        }
-        
-        /* Style the tab content */
-        .tabcontent {
-          display: none;
-          padding: 6px 12px;
-          border: 1px solid #ccc;
-          border-top: none;
-        }
-        </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
 <body>
-    <h2>Login as:</h2>
+    <form action="" method="POST">
+      {% csrf_token %}
+      {{form.username}}
+      {{form.password}}
+      <button
+        type="submit"
+        class="btn btn-warning"
+        style="color: black"
+      >
+        Sign In
+      </button>
 
-    <div class="tab">
-    <button class="tablinks" onclick="openCity(event, 'Staff')">Staff</button>
-    <button class="tablinks" onclick="openCity(event, 'Patient')">Patient</button>
-    </div>
+    </form>
+    {% for message in messages %} {% if message.tags == 'success' %}
 
-    <div id="Staff" class="tabcontent">
-    <h3>Staff</h3>
-    <p>Staff login input here</p>
-    </div>
+      {% else %}
+      {{message | striptags}}
+      {% endif %} {% endfor %}
 
-    <div id="Patient" class="tabcontent">
-    <h3>Patient</h3>
-    <p>Patient login input here.</p> 
-    </div>
 
-    </div>
-    <script>
-        function openCity(evt, cityName) {
-          var i, tabcontent, tablinks;
-          tabcontent = document.getElementsByClassName("tabcontent");
-          for (i = 0; i < tabcontent.length; i++) {
-            tabcontent[i].style.display = "none";
-          }
-          tablinks = document.getElementsByClassName("tablinks");
-          for (i = 0; i < tablinks.length; i++) {
-            tablinks[i].className = tablinks[i].className.replace(" active", "");
-          }
-          document.getElementById(cityName).style.display = "block";
-          evt.currentTarget.className += " active";
-        }
-    </script>
+
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+      
 </body>
 </html>
