cannot set user to doctorform

--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/staff.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/staff.html
@@ -82,7 +82,7 @@
               <br />
               <br />
               <div class="row" style="margin-left: 15%; margin-right: 15%">
-              <div class="col">Enter Prefix: {{form2.contact}}</div>
+              <div class="col">Enter Contact Number: {{form2.contact}}</div>
               <div class="col">Enter Title: {{form2.type}}</div>
               </div>
               <br />
