--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/staff.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/staff.html
@@ -84,6 +84,7 @@
               <div class="row" style="margin-left: 15%; margin-right: 15%">
               <div class="col">Enter Contact Number: {{form2.contact}}</div>
               <div class="col">Enter Title: {{form2.type}}</div>
+              <div class="col">Enter End Date: {{form2.end_date}}</div>
               </div>
               <br />
               <div class="row" style="width: 50%; margin-left: 15%; margin-right: 15%">
