--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/navbar.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/navbar.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Staff</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
@@ -17,7 +17,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              {% if request.user|has_group:"staff" or request.user|has_group:"doctor"%}
+              {% if request.user|has_group:"staff"%}
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'search-create-patient' %}">Patient</a>
               </li>
