--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/search-create-patient.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/search-create-patient.html
@@ -38,10 +38,14 @@ style="color: black"
                 <div class="row" style="width: 50%; margin-left: 15%; margin-right: 15%">
                 <div class="col">Confirm Password: {{form.password2}}</div>
                 </div>
-
-                <div>
-            <button id="submit_button" type="submit" class="btn btn-warning" >Submit</button>
+                <br />
+                <br />
+                <div class="row" style="width: 50%; margin-left: 40%; margin-right: 40%">
+                  <div class="col">
+                    <button id="submit_button" type="submit" class="btn btn-warning" >Submit</button>
+                  </div>
                 </div>
+                
             </div>
         </form>
       </div>
