--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool.html
@@ -1,19 +1,4 @@
 {% extends 'vaccinerecordapp/navbar.html' %} 
 {% block content %} {% load static %} {% load auth_extras %}
-<ul class="nav flex-column">
-    <li class="report">
-      <a class="nav-link active" href="#">Report</a>
-    </li>
-    <li class="reminder">
-      <a class="nav-link" href="#">Reminder</a>
-    </li>
-    {% if request.user|has_group:"staff"%}
-    <li class="staff">
-      <a class="nav-link" href="{% url 'staff' %}">Staff</a>
-    </li>
-    {% endif %}
-    <li class="nav-item">
-      <a class="nav-link disabled" href="#">Disabled</a>
-    </li>
-  </ul>
+{% include 'vaccinerecordapp/staff-navbar.html' %}
 {% endblock %}
