--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/navbar.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/navbar.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">BaQna</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,7 +19,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               {% if request.user|has_group:"staff"%}
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'search-create-patient' %}">Patient</a>
+               <a class="nav-link active" aria-current="page" href="{% url 'search-create-patient' %}">Patient</a> 
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'tool' %}">Tool</a>
