--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/create-patient-record.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/create-patient-record.html
@@ -70,6 +70,7 @@
                 <br />
                 </div>
                 <div class="row" style="margin-left: 10%; margin-right: 10%">
+                <div class="col">username: {{form.username}}</div>
                 <div class="col">First Name: {{form.first_name}}</div>
                 <div class="col">Middle Name: {{form.middle_name}}</div>
                 <div class="col">Last Name: {{form.last_name}}</div>
