to fix Display Info, modified UI

--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-navbar.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-navbar.html
@@ -1,7 +1,7 @@
 {% load static %} {% load auth_extras %}
 
-
-<ul class="nav flex-column" style="background-color: thistle;">
+<div class="d-flex align-items-start">
+<ul class="nav flex-column " style="background-color:#e3f2fd;;">
     <li class="profile">
       <a class="nav-link active" href="#">Profile</a>
     </li>
@@ -21,3 +21,4 @@
     {% endif %}
     
 </ul>
+</div>
