--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/navbar.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/navbar.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">BaQna</a>
+          <a class="navbar-brand" href="{% url 'dashboard' %}">BaQna</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
