--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/search-create-patient.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/search-create-patient.html
@@ -10,6 +10,7 @@ style="color: black"
   <thead>
       <tr>
           <th scope="col">Name</th>
+          <th scope="col">Username</th>
           <th colspan="2"></th>
       </tr>
   </thead>
@@ -18,8 +19,8 @@ style="color: black"
       {% for patient in patients %}
 
       <tr>
-          <td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.last_name}}, {{patient.first_name}}</td></a>
-
+          <td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.last_name}}, {{patient.first_name}}</a></td>
+          <td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.username}}</a></td>
           <td>
               <a href="#" class="btn btn-outline-dark">
                   <i class="fas fa-edit"></i>
